--- a/views/index.erb
+++ b/views/index.erb
@@ -1,296 +1,3 @@
-<hr class="sixteen columns">
-
-<div id="slider" class="sixteen columns">
-			
-<div class="flexslider">
-<ul class="slides">
-			    
-	<li>
-		<img src="/images/slide1.jpg" alt="">
-			<div class="captions hide-on-phones">
-				<h3>LESS extends CSS with dynamic behavior.</h3>
-			</div>
-	</li>
-
-	<li>
-		<img src="/images/slide1.jpg" alt="">
-			<div class="captions hide-on-phones">
-				<h3>Runs on both the client & server-side.</h3>
-			</div>
-	</li>
-
-	<li>
-		<img src="/images/slide1.jpg" alt="">
-			<div class="captions hide-on-phones">
-				<h3>Works with Node.js and Rhino.</h3>
-			</div>
-	</li>
-
-</ul>
-</div><!-- /end flexslider -->
-</div><!-- /end slider -->
-
-<div id="" class="flex-container sixteen columns hide-on-phones">
-</div><!-- /end slider controls -->	
-
-
-
-
-
-
-
-
-
-
-<hr class="sixteen columns">
-
-<div id="portfolio" class="row">
-<div id="" class="sixteen columns bordertop"></div><!-- / -->
-
-<div id="" class="four columns">
-	
-<h4>Portfolio</h4>
-	<p>
-	A show and tell of what's been
-	keeping us busy.
-	</p>
-<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5>
-	
-<!-- 	<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5> -->
-
-</div><!-- / -->
-
-<div class="row offset-by-four">
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<br class="clear" />
-</div><!-- /end offset row -->
-</div><!-- /end portfolio -->
-
-
-<hr class="sixteen columns">
-<div id="portfolio" class="row">
-<div id="" class="sixteen columns bordertop"></div><!-- / -->
-
-<div id="" class="four columns">
-		
-<h4>Articles</h4>
-	<p>
-	A show and tell of what's been
-	keeping us busy.
-	</p>
-<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5>
-	
-<!-- 	<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5> -->
-
-</div><!-- / -->
-
-<div class="row offset-by-four">
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb3.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb3.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb4.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
-
-<br class="clear" />
-</div><!-- /end offset row -->
-</div><!-- /end portfolio -->
-
-
-
-
-<hr class="sixteen columns">
-
-<div id="" class="eight columns">
-
-<h1>GET IN CONTACT</h1>
-<p>Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia <span class="reverse">deserunt</span> mollit anim id est laborum.</p>
-
-
-	
-</div><!-- / -->
-
-<div id="" class="eight columns">
-
-<form id="" class="contact-form" action="" method="post">
-<fieldset>
-	<label for="">Name: *</label>
-	<input type="text" id="" name="name" value="" /></fieldset>
-<fieldset>
-	<label for="">Email: *</label>
-	<input type="text" id="" name="email" value="" /></fieldset>
-<fieldset>
-	<label for="">Message: *</label>
-	<textarea id="" name="message" cols="300" rows="12"></textarea>
-</fieldset>
-<input type="submit" id="searchsubmit" value="SUBMIT" class="button round"/>
-</form>
-
-	
-</div><!-- / -->
-
-<div id="" class="sixteen columns bigbreak">
-	
-</div><!-- / -->
-
-<div id="" class="four columns fancyborder">
-
-<h4>Register</h4>
-
-	<form role="search" method="get" id="searchform" action="#">
-		<div>
-			<label>Hello</label>
-			<input type="text" value="" name="s" id="s" />
-			<label>Hello</label>
-			<input type="text" value="" name="s" id="s" />
-			<label>Hello</label>
-			<input type="textarea" rows="8" name="s" id="s" />
-			<input type="submit" id="searchsubmit" value="SUBMIT" class="button round"/>
-		</div>
-	</form>
-	
-</div><!-- / -->
-
-<div id="" class="twelve columns fancyborder">
-
-<h4>Nice Forms</h4>
-
-<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud <span class="reverse">exercitation</span> ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia <span class="reverse">deserunt</span> mollit anim id est laborum.</h6>
-  	
-</div><!-- / -->
-
-<div id="" class="sixteen columns fancyborder"></div><!-- / -->
-
-<div id="" class="eight columns fancyborder">
-
-<h4>Hi there, let&#8217;s get in touch!</h4>
-
-<form id="" class="contact-form" action="" method="post">
-<fieldset>
-	<label for="">Name: *</label>
-	<input type="text" id="" name="name" value="" /></fieldset>
-<fieldset>
-	<label for="">Email: *</label>
-	<input type="text" id="" name="email" value="" /></fieldset>
-<fieldset>
-	<label for="">Message: *</label>
-	<textarea id="" name="message" cols="300" rows="12"></textarea>
-</fieldset>
-</form>
-
-	
-</div><!-- / -->
-
-<div id="" class="eight columns fancyborder">
-	<form id="myForm" action="#" method="post" >
-    <div>
-         <label for="name">Text Input:</label>
-         <input type="text" name="name" id="name" value="" tabindex="1" />
-    </div>
-
-    <div>
-         <h4>Radio Button Choice</h4>
-
-         <label for="radio-choice-1">Choice 1</label>
-         <input type="radio" name="radio-choice-1" id="radio-choice-1" tabindex="2" value="choice-1" />
-
-		 <label for="radio-choice-2">Choice 2</label>
-         <input type="radio" name="radio-choice-2" id="radio-choice-2" tabindex="3" value="choice-2" />
-    </div>
-
-	<div>
-		<label for="select-choice">Select Dropdown Choice:</label>
-		<select name="select-choice">
-			<option value="Choice 1">Choice 1</option>
-			<option value="Choice 2">Choice 2</option>
-			<option value="Choice 3">Choice 3</option>
-		</select>
-	</div>
-
-	<div>
-		<label for="textarea">Textarea:</label>
-		<textarea cols="40" rows="8" name="textarea"></textarea>
-	</div>
-
-	<div>
-	    <label for="checkbox">Checkbox:</label>
-		<input type="checkbox" name="checkbox" />
-    </div>
-
-	<div>
-	    <input type="submit" value="SUBMIT" class="button radius"/>
-    </div>
-</form>
-</div><!-- / -->
+<%= erb :slideshow %>
+<%= erb :portfolio %>
+<%= erb :contact %>
