--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -10,24 +10,24 @@ img {
   margin-bottom: 20px;
 }
 #portfolio img {
-  max-width: 90%;
-  padding: 10px;
-  /* A percentage that, when doubled and added to the above, makes 100%. */
-
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #333333;
-  /* Color of the faux border. */
-
+  max-width: 94%;
+  padding: 3%;
+  background: #fff;
+  outline: 1px solid #ccc;
+  border-radius: 2px;
+  box-shadow: 3px 3px 3px #6b6b6b;
 }
-#portfolio img:hover {
-  background-color: darksalmon;
-  /* Color of the faux border. */
-
+#portfolio {
+  margin-bottom: 20px;
 }
+/*nav {
+  background:url(@pattern) @primary;
+}*/
 body {
-  background-color: #eeeeee;
+  background-color: #dddddd;
   padding-top: 0px;
   font-family: "Gotham";
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #eeeeee;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #dddddd;
 }
 h1,
 h2,
@@ -41,19 +41,18 @@ h6 {
 
 }
 p, li, a {
-  color: #333333;
+  color: #111111;
   font-family: "Gotham";
 }
 .fancyborder {
-  /*background: url(../images/dark_stripes.png) -40px -40px repeat-x;*/
-
+  /*	background:url(@pattern) @primary; */
   border-top: 1px solid #333333;
   padding-top: 20px;
 }
 hr {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #333333;
   color: #333333;
-  padding-top: 10px;
+  padding-top: 0px;
   border: none;
   margin: 0 0 20px 0;
 }
@@ -61,8 +60,8 @@ hr {
   text-align: center;
 }
 span.reverse {
-  background: darksalmon;
-  color: #eeeeee;
+  background: #df6840;
+  color: #dddddd;
   padding: 2px 4px 0px;
   margin: 0px;
   -moz-border-radius: 1px;
@@ -81,16 +80,16 @@ span.reverse {
 }
 .glyphs {
   font-family: 'IconicStrokeRegular';
-  font-size: 32px;
+  font-size: 30px;
   float: left;
   height: 1px;
   line-height: 1px;
-  color: darksalmon;
+  color: #df6840;
 }
 .calltoaction {
   float: left;
   padding: 0px 0 0px 7px;
-  color: darksalmon;
+  color: #df6840;
 }
 /*--------------------------------------------------
 ----------------------------------------------------
@@ -131,7 +130,7 @@ input, textarea {
   width: 100%;
   min-height: 36px;
   /*  max-width: 420px;*/
-  background: url(../images/input-bg.png) 0px 0px #eeeeee;
+  background: url(../images/input-bg.png) 0px 0px #dddddd;
   color: #333333;
   border: 1px solid #333333;
   font-size: 1em;
@@ -149,12 +148,12 @@ input, textarea {
   transition: all linear 0.2s;
 }
 input:focus, textarea:focus {
-  background: url(../images/input-bg.png) 0px -1px #eeeeee;
+  background: url(../images/input-bg.png) 0px -1px #dddddd;
   outline: none !important;
-  border-color: darksalmon;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px darksalmon;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px darksalmon;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px darksalmon;
+  border-color: #df6840;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #df6840;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #df6840;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #df6840;
 }
 input.oversize, textarea.oversize {
   font-size: 18px !important;
@@ -162,14 +161,14 @@ input.oversize, textarea.oversize {
 }
 /* Text input and textarea, disabled */
 input[disabled], textarea[disabled] {
-  background-color: #eeeeee;
+  background-color: #dddddd;
 }
 /* Inlined Label Style */
 input.placeholder, textarea.placeholder {
-  color: #333333;
+  color: #111111;
 }
 select {
-  background: #eeeeee;
+  background: #dddddd;
   color: #333333;
   width: auto;
   min-width: 300px;
@@ -179,7 +178,7 @@ select {
   height: 2.2em;
 }
 select:focus {
-  border: 1px solid darksalmon;
+  border: 1px solid #df6840;
   outline: none !important;
 }
 input.small, textarea.small {
@@ -197,7 +196,7 @@ input.expand, textarea.expand {
 /* Fieldsets */
 form fieldset {
   padding: 9px 9px 2px 9px;
-  border: solid 1px #333333;
+  border: solid 1px #111111;
   margin: 9px 0 9px 0;
 }
 /* Inlined Radio & Checkbox */
@@ -261,7 +260,7 @@ BUTTONS
   display: inline-block;
   text-align: center;
   padding: 10px 34px 10px;
-  color: #eeeeee;
+  color: #dddddd;
   text-decoration: none;
   font-weight: bold;
   line-height: 1;
@@ -321,7 +320,7 @@ input[type=submit].button {
 .button:focus,
 #searchsubmit:hover,
 input[type=submit]:focus {
-  background: darksalmon;
+  background: #df6840;
   text-decoration: none;
 }
 /* Disabled ---------- */
@@ -379,27 +378,28 @@ CENTERED MENU
 #centeredmenu ul li a {
   display: block;
   margin: 0;
-  padding: .9em 1em .9em 1em;
+  padding: 1em 1em .8em 1em;
   line-height: 1em;
   text-decoration: none;
   color: #333333;
   font-weight: bold;
   transition: all 2s linear;
   -webkit-transition: all 0.2s ease-out;
+  border-radius: 2px;
 }
 #centeredmenu ul li.active a {
-  color: #eeeeee;
+  color: #dddddd;
   background: #333333;
 }
 #centeredmenu ul li a:hover {
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") repeat #333333;
-  color: #fff;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #333333;
+  color: #dddddd;
 }
 #centeredmenu ul li:hover a, #centeredmenu ul li.hover a {
   /* This line is required for IE 6 and below */
 
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") repeat #333333;
-  color: #eeeeee;
+  color: #dddddd;
 }
 /* Submenu items */
 #centeredmenu ul ul {
@@ -407,7 +407,7 @@ CENTERED MENU
   /* Sub menus are hidden by default */
 
   position: absolute;
-  top: 2.8em;
+  top: 2.7em;
   left: 0;
   right: auto;
   /*resets the right:50% on the parent ul */
@@ -428,9 +428,10 @@ CENTERED MENU
   width: 100%;
   margin-top: 1px;
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") repeat #333333;
+  border-radius: 2px;
 }
 #centeredmenu ul ul li:first-child {
-  margin-top: 11px;
+  margin-top: 1px;
   border-top: none;
 }
 /*#centeredmenu ul ul li:last-child {
@@ -446,10 +447,11 @@ CENTERED MENU
   /* resets the bold set for the top level menu items */
 
   background: transparent;
-  color: #eeeeee;
+  color: #dddddd;
   line-height: 1em;
   /* overwrite line-height value from top menu */
 
+  border-radius: 2px;
 }
 #centeredmenu ul ul li a:hover,
 #centeredmenu ul li.active ul li a:hover,
@@ -457,8 +459,8 @@ CENTERED MENU
 #centeredmenu ul li.hover ul li a:hover {
   /* This line is required for IE 6 and below */
 
-  color: #eeeeee;
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") darksalmon;
+  color: #dddddd;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #df6840;
 }
 /* Flip the last submenu so it stays within the page */
 #centeredmenu ul ul.last {
@@ -608,7 +610,7 @@ html[xmlns] .slides {
   left: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.3);
-  color: #333333;
+  color: #111111;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
   font-size: 14px;
   line-height: 18px;
@@ -654,9 +656,9 @@ html[xmlns] .slides {
 /* Control Nav */
 .flex-control-nav {
   width: 100%;
-  position: absolute;
-  bottom: 37px;
-  text-align: right;
+  position: relative;
+  bottom: 0px;
+  text-align: center ;
 }
 .flex-control-nav li {
   margin: 0 0 0 12px;
@@ -668,22 +670,19 @@ html[xmlns] .slides {
   margin: 0;
 }
 .flex-control-nav li:last-child {
-  margin-right: 17px;
+  margin-right: 30px;
 }
 .flex-control-nav li a {
-  width: 26px;
-  height: 26px;
+  width: 22px;
+  height: 22px;
   display: block;
   cursor: pointer;
   text-indent: -9999px;
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #333333;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #111111;
   -webkit-border-radius: 23px;
 }
-.flex-control-nav li a:hover {
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") darksalmon;
-}
-.flex-control-nav li a.active {
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") darksalmon;
+.flex-control-nav li a.active, .flex-control-nav li a:hover {
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #df6840;
 }
 /* Addons */
 .flex-container {
@@ -697,11 +696,19 @@ html[xmlns] .slides {
   left: 0px;
 }
 .captions h3 {
-  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") darksalmon;
-  color: #eeeeee;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIHWMoLS39DwQMMMwIYiADJhinrKwMLIOhAgCZhxO1afUkzAAAAABJRU5ErkJggg==") #df6840;
+  color: #dddddd;
   padding: 8px 20px 2px 20px;
   display: block;
   width: 100%;
   opacity: 1;
   opacity: 0;
+}
+.flexslider .slides img {
+  max-width: 97.8%;
+  padding: 1% 1% 1% 1%;
+  background: #fff;
+  outline: 1px solid #ccc;
+  border-radius: 2px;
+  box-shadow: 3px 3px 3px #6b6b6b;
 }
