--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title><%= @title %></title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link href="/css/crossbones.css" rel="stylesheet">  
   <link href="/css/theme.css" rel="stylesheet">
